--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -5,7 +5,7 @@
     <h4 class="my-3 text-center">{{ formTitle }}</h4>
     <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
       <div class="mb-3">
-        <label for="category">Category</label>
+        <label class="form-label" for="category">Category</label>
         <select
           name="category"
           id="category"
