--- a/src/app/product/product-details/product-details.component.css
+++ b/src/app/product/product-details/product-details.component.css
@@ -2,7 +2,7 @@
   /* border: 2px solid red; */
   border-radius: 1em;
   width: min-content;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   margin: 1em auto;
   display: flex;
   justify-content: center;
@@ -42,6 +42,7 @@
 input {
   width: 4em;
   margin: 0.5em auto;
+  padding: auto 10px;
   border: 1px solid grey;
   border-radius: 0.2em;
 }
