--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -61,10 +61,12 @@
     class="details-child details-img"
   />
   <div class="details-child">
-    <div class="product-name">Lorem Ipsum</div>
+    <div class="product-name">{{product.name}}</div>
     <div class="price-quantity">
       <div class="price-quantity-row">
-        <span class="price-quantity-child"><sup>$</sup>11.11</span>
+        <span class="price-quantity-child"
+          ><sup>$</sup>{{ product.price }}</span
+        >
 
         <div class="price-quantity-child quantity-wrapper">
           <label for="quantity">Quantity</label>
@@ -76,7 +78,7 @@
             id="quantity"
             [defaultValue]="1"
             step="1"
-            value="10"
+            value="1"
             (change)="onQuantityChange()"
             #quantityRef
           />
@@ -97,9 +99,9 @@
       </div>
 
       <div class="btn-actions">
-        <button class="btn-cart">Add to Cart</button>
+        <button class="btn-cart" (click)="onAddToCart()">Add to Cart</button>
         <button class="btn-wishlist" style="" (click)="onAddToWishlist()">
-          Add to Cart
+          Add to Wishlist
         </button>
       </div>
     </div>
