--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -20,7 +20,7 @@
       (click)="order()"
       [disabled]="!canOrder"
       type="button"
-      class="btn btn-primary confirm"
+      class="btn-checkout"
     >
       Checkout
     </button>
