--- a/src/app/category/category-item/category-item.component.css
+++ b/src/app/category/category-item/category-item.component.css
@@ -1,21 +1,21 @@
-.card{
-    width : 20rem;
-    height : 24rem;
-  }
+.category-card {
+  border: none;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  width: 15rem;
+}
   
-  .card-img-top {
-    object-fit: cover;
-    height: 20rem;
+  .category-image {
+    width: 15rem;
+    height: 15rem;
+    border-radius: 10px;
   }
-  
-  a {
-    text-decoration: none;
-  }
-  
+    
   .card-title {
     color: #484848;
     font-size: 1.1rem;
     font-weight: 400;
+    margin: 0.5em;
   }
   
   .card-title:hover {
@@ -24,8 +24,31 @@
   
   .card-text {
     font-size: 0.9rem;
+    margin: 0.5em;
+  }
+
+  .btn-show {
+    color: #072f5f;
+    background-color:aliceblue;
+    margin-left: 0.2em;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  .btn-edit {
+    width: 150px;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    border: none;
+    margin: auto;
+    background-color: #072f5f;
+    color: #ffa700;
+    font-weight: 400;
+    font-size: 1em;
   }
   
-  #edit-category {
-    float: right;
+  .btn-edit:hover {
+    color: #ffa6006b;
   }
+  
