--- a/src/app/category/category-item/category-item.component.html
+++ b/src/app/category/category-item/category-item.component.html
@@ -1,21 +1,21 @@
-<div class="card h-100">
-    <img
-      class="card-img-top img-fluid"
-      [src]="category.imageUrl"
-      alt="Category Image"
-    />
-  
-    <div class="card-body">
-      <h5 class="card-title">{{ category.name }}</h5>
-      <p class="card-text font-italic">
-        {{ category.description.substring(0, 65) }}...
-      </p>
-    </div>
-  
-    <button
-      class="btn btn-outline-primary"
-      style="width: 4rem; margin: .5rem .5rem .5rem auto;" (click)="onEdit()"
-    >
-      Edit
-    </button>
+<div class="category-card">
+  <img class="category-image" [src]="category.imageUrl" alt="Category Image" />
+
+  <div class="card-body">
+    <h5 class="card-title">{{ category.name }}</h5>
+    <p class="card-text font-italic" *ngIf="hide">
+      {{ category.description.substring(0, 50) }}...<span
+        class="btn-show"
+        role="button"
+        (click)="toggleText()"
+        >(+)</span
+      >
+    </p>
+    <p class="card-text font-italic" *ngIf="!hide">
+      {{ category.description }}
+      <span class="btn-show" role="button" (click)="toggleText()">(-)</span>
+    </p>
   </div>
+
+  <button class="btn-edit" (click)="onEdit()">Edit</button>
+</div>
