--- a/src/app/category/category-list/category-list.component.css
+++ b/src/app/category/category-list/category-list.component.css
@@ -1,10 +1,18 @@
 h4 {
-    font-family: 'Roboto', sans-serif;
-    color: #484848;
-    font-weight: 700;
-  }
-  
-  #add-category {
-    float: right;
-    font-weight: 500;
-  }
+  font-family: "Roboto", sans-serif;
+  color: #484848;
+  font-weight: 700;
+}
+
+#add-category {
+  float: right;
+  font-weight: 500;
+}
+
+.grid {
+  margin-top: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  align-items: stretch;
+}
