--- a/src/app/product/product-item/product-item.component.css
+++ b/src/app/product/product-item/product-item.component.css
@@ -1,6 +1,7 @@
 .card {
   border: none;
   background-color: whitesmoke;
+  width: 15rem;
   border-radius: 10px;
 }
 
@@ -40,7 +41,6 @@
   font-size: 1.5em;
   top: 0.5em;
   right: 0.5em;
-  /* color: #072f5f; */
   color: red;
   background: none;
   border: none;
