--- a/src/app/product/product-list/product-list.component.css
+++ b/src/app/product/product-list/product-list.component.css
@@ -1,39 +1,36 @@
 .wrapper {
-    /* border: 2px solid red; */
-    width: 85vw;
-    margin: auto;
-    padding: 4em;
-}
-
-.product-list-header {
-    /* border: 2px solid blue; */
+  width: 85vw;
+  margin: auto;
+  padding: 4em;
 }
 
 .product-list-heading {
-    text-align: center;
-    width: 8em;
-    margin: 0.5em auto;
+  text-align: center;
+  width: 8em;
+  margin: 0.5em auto;
 }
 
 .btn-add-product {
-    width: 150px;
-    height: 40px;
-    display: block;
-    border-radius: 5px;
-    border: none;
-    margin: auto;
-    background-color: #072f5f;
-    color: #ffa700;
-    font-weight: 400;
-    font-size: 1em;
+  width: 150px;
+  height: 40px;
+  display: block;
+  border-radius: 5px;
+  border: none;
+  margin: auto;
+  background-color: #072f5f;
+  color: #ffa700;
+  font-weight: 400;
+  font-size: 1em;
 }
 
 .btn-add-product:hover {
-    color: #ffa6006b
+  color: #ffa6006b;
 }
 
 .products-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 2em 0;
+  margin-top: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  gap: 20px;
+  align-items: stretch;
 }
