--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,88 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a
-        class="navbar-brand"
-        routerLink="/"
-        routerLinkActive="active"
-        style="color: #ffa700"
-        >Web-Shop</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-  
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/admin/categories"
-              routerLinkActive="active"
-              >Categories</a
-            >
-          </div>
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/admin/products"
-              routerLinkActive="active"
-              >Products</a
-            >
-          </div>
-  
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/wishlist"
-              routerLinkActive="active"
-              >Wishlist</a
-            >
-          </div>
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/cart"
-              routerLinkActive="active"
-              >Cart</a
-            >
-          </div>
-  
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/checkout"
-              routerLinkActive="active"
-              >Checkout</a
-            >
-          </div>
-  
-          <div>
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/auth"
-              routerLinkActive="active"
-              >Auth</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav> -->
-
 <nav class="">
   <div class="">
     <div class="nav-top">
@@ -115,7 +30,7 @@
             aria-current="page"
             routerLink="/auth"
             routerLinkActive="active"
-            ><i class="bi bi-person-circle"></i> John Doe</a
+            ><i class="bi bi-person-circle"></i> {{ user }}</a
           >
         </div>
       </div>
