--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         class="nav-top-item nav-brand"
         routerLink="/"
         routerLinkActive="active"
-        style="color: #ffa700"
+        style="color: #072f5f"
         >Web-Shop</a
       >
 
