changed side bar color

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,7 +21,7 @@ body {
   width: 10em;
   font-weight: 400;
   font-size: 1.2em;
-  background-color: #072f5f0c;
+  /* background-color: #072f5f0c; */
 }
 
 .sidebar-navs {
