--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,13 @@
     <i
       class="bi bi-list menu-btn-show"
       id="icon-menu"
+      role="button"
       (click)="onShowMenu()"
     ></i>
     <i
       class="bi bi-x-square-fill close-btn-hide"
       id="icon-close"
+      role="button"
       (click)="onHideMenu()"
     ></i>
     <div id="sidebar-navs" class="sidebar-navs navs-hide">
