--- a/src/app/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/wishlist/wishlist-item/wishlist-item.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="child-item">
-    <button class="btn btn-outline-primary" style="" (click)="onMoveToCart()">
+    <button class="btn btn-outline-primary" (click)="onMoveToCart()">
       Move to Cart
     </button>
 
