--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <a
           class="nav-link"
           aria-current="page"
-          routerLink="/admin/categories"
+          routerLink="/categories"
           routerLinkActive="active"
           >Categories</a
         >
@@ -27,7 +27,7 @@
         <a
           class="nav-link"
           aria-current="page"
-          routerLink="/admin/products"
+          routerLink="/products"
           routerLinkActive="active"
           >Products</a
         >
