--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,29 +1,13 @@
 footer {
-  background-color: #232f3e;
+  text-align: center;
+  color: #072f5f;
+  background-color: white;
+  height: 50px;
   font-size: 16px;
-  margin-top: 200px;
+  margin-top: 40px;
+  position: fixed;
   bottom: 0;
-
-
-}
-
-li {
-  padding-left: 0;
-  padding-bottom: 10px;
-}
-
-a {
-  text-decoration: none;
-}
-
-.footer-link {
-  color: #ddd;
-}
-
-#logo {
-  width: 150px;
-}
-
-footer {
   font-family: "Roboto", sans-serif;
+  width: 100%;
+  padding: 10px 0;
 }
