--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,9 +1,14 @@
+<ng-template appPlaceholder></ng-template>
 <div class="container">
   <div class="row">
     <div class="col-12 text-center">
       <h3 class="pt-3">Your Wishlist</h3>
       <div>
-        <button class="btn-move" (click)="onMoveAllToCart()" *ngIf="wishlists.length > 0">
+        <button
+          class="btn-move"
+          (click)="onMoveAllToCart()"
+          *ngIf="wishlists.length > 0"
+        >
           Move all to Cart
         </button>
       </div>
@@ -16,3 +21,4 @@
     </div>
   </div>
 </div>
+<app-loading-spinner *ngIf="loading"></app-loading-spinner>
